@startuml Personajes 

interface Habilidades<T> {
    +usarHabilidad(habilidad: T): void
}

abstract class Personaje {
    -nombrePersonaje: String
    -nivel: int
    +Personaje(nombrePersonaje: String, nivel: int)
    +atributosPersonajes(): String
    +atacar(): void
    +usarHabilidad(habilidad: String): void
}

class PersonajeFisico {
    +PersonajeFisico(nombrePersonaje: String, nivel: int)
    +atacar(): void
    +usarHabilidad(habilidad: String): void
    +usarHabilidadFisica(): void
}

class PersonajeMagico {
    +PersonajeMagico(nombrePersonaje: String, nivel: int)
    +atacar(): void
    +usarHabilidad(habilidad: String): void
    +usarHabilidadMagica(): void
}

Personaje --|> Habilidades

PersonajeFisico --|> Personaje
PersonajeMagico --|> Personaje

@enduml
